# MinImageLib

./: CMakeLists.txt  CMakePresets.json  MinixFS.cpp  MinixFS.h  Stream.h  V7Direct.cpp  V7Direct.h  custom-compiler-bcc.yaml  library.cpp  library.h  minixfs_operations.cpp  minixfs_operations.h  types.h
.github/workflows/: cmake.yml
include/minix/: const.h
include/sys/: types.h
